# Suneku

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/source/: api.md  conf.py  index.md
docs/source/notebooks/: tutorial.ipynb
suneku/: __init__.py  client.py  errors.py
suneku/ext/: formatter.py
