[build-system]
requires = [
    "flit_core >=3.4,<4",
    "wheel",
    "oldest-supported-numpy",
]
build-backend = "flit_core.buildapi"

[project]
name = "Suneku"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Miss Corruption", email = "miss_corruption@protonmail.com"}]
dynamic = ["version", "description"]
dependencies = [
    "setuptools~=60.8.1",
    "loguru~=0.6.0",
    "aiohttp~=3.8.1",
]

[project.optional-dependencies]
doc = [
    "nbsphinx>=0.8.6",
    "myst-parser>=0.13.1",
    "sphinx_rtd_theme~=1.0.0",
]
